--- a/products.html
+++ b/products.html
@@ -124,6 +124,7 @@
       <img src="img/pro-black.png" alt="Rider Pro Black" class="responsive-img">
       <h3>Rider Pro Black</h3>
       <p>Full-face matte black helmet with strong ABS shell.</p>
+      <p>Price: 5000/-</p>
       <a href="order.html?product=Rider Pro Black" class="btn">Order Now</a>
 
     </div>
@@ -132,6 +133,7 @@
       <img src="img/firered.png" alt="FireEdge Red" class="responsive-img">
       <h3>FireEdge Red</h3>
       <p>Sporty red helmet with dual visor and airflow vents.</p>
+      <p>Price: 7500/-</p>
      <a href="order.html?product=FireEdge Red" class="btn">Order Now</a>
 
     </div>
@@ -140,6 +142,7 @@
       <img src="img/aero.png" alt="AeroShield White" class="responsive-img">
       <h3>AeroShield White</h3>
       <p>Aerodynamic lightweight helmet for comfort riding.</p>
+      <p>Price: 6700/-</p>
       <a href="order.html?product=AeroShield White" class="btn">Order Now</a>
 
     </div>
@@ -148,6 +151,7 @@
       <img src="img/stormx.png" alt="StormX Helmet" class="responsive-img">
       <h3>StormX Ultra</h3>
       <p>ISI-approved helmet with heavy-duty ABS shell.</p>
+      <p>Price: 4500/-</p>
       <a href="order.html?product=StormX Ultra" class="btn">Order Now</a>
 
     </div>
@@ -156,6 +160,7 @@
       <img src="img/thunder.png" alt="ThunderStrike Pro" class="responsive-img">
       <h3>ThunderStrike Pro</h3>
       <p>Stay Safe. Stay Fast. Go ThunderStrike.</p>
+      <p>Price: 4000/-</p>
      <a href="order.html?product=ThunderStrike Pro" class="btn">Order Now</a>
 
     </div>
@@ -164,6 +169,7 @@
       <img src="img/titan.png" alt="Titan Glide" class="responsive-img">
       <h3>Titan Glide</h3>
       <p>Smooth Protection. Strong Performance. Titan Glide.</p>
+      <p>Price: 5500/-</p>
       <a href="order.html?product=Titan Glide" class="btn">Order Now</a>
 
     </div>
@@ -172,6 +178,7 @@
       <img src="img/phantom.png" alt="Phantom Aero-X" class="responsive-img">
       <h3>Phantom Aero-X</h3>
       <p>“Ultra-aerodynamic helmet built for speed, style, and safety.”</p>
+      <p>Price: 7500/-</p>
       <a href="order.html?product=Phantom Aero-X" class="btn">Order Now</a>
 
     </div>
@@ -180,6 +187,7 @@
       <img src="img/wolfen.png" alt="WolfenX Beast Mode" class="responsive-img">
       <h3>WolfenX Beast Mode</h3>
       <p>“Unleash the beast—wild graphics, wild performance.”</p>
+      <p>Price: 6700/-</p>
       <a href="order.html?product=WolfenX Beast Mode" class="btn">Order Now</a>
 
     </div>
@@ -188,6 +196,7 @@
       <img src="img/racerx.png" alt="RacerX Velocity 92" class="responsive-img">
       <h3>RacerX Velocity 92</h3>
       <p>“Unmatched speed, unbeatable style.”</p>
+      <p>Price: 4000/-</p>
       <a href="order.html?product=RacerX Velocity 92" class="btn">Order Now</a>
 
     </div>
@@ -196,6 +205,7 @@
       <img src="img/trailhawk.png" alt="TrailHawk Adventure Pro" class="responsive-img">
       <h3>TrailHawk Adventure Pro</h3>
       <p>“Conquer dirt, sand, and mountains with confidence.”</p>
+      <p>Price: 8400/-</p>
       <a href="order.html?product=TrailHawk Adventure Pro" class="btn">Order Now</a>
 
     </div>
@@ -204,6 +214,7 @@
       <img src="img/nightguard.png" alt="NightGuard Tactical VX" class="responsive-img">
       <h3>NightGuard Tactical VX</h3>
       <p>“Futuristic armor meets advanced road safety.”</p>
+      <p>Price: 8900/-</p>
       <a href="order.html?product=NightGuard Tactical VX" class="btn">Order Now</a>
 
     </div>
@@ -295,3 +306,4 @@ document.getElementById("searchBox").addEventListener("keyup", function () {
 
 </body>
 </html>
+
