--- a/index.html
+++ b/index.html
@@ -103,6 +103,65 @@
   </div>
 </section>
 
+<div class="trust-bar">
+  <div class="trust-item">
+    <span style="font-size: 30px;">🛡️</span>
+    <div>
+      <strong>ISI Certified</strong>
+      <p>Safety Standards Approved</p>
+    </div>
+  </div>
+  <div class="trust-item">
+    <span style="font-size: 30px;">🚚</span>
+    <div>
+      <strong>Free Shipping</strong>
+      <p>On all orders over $50</p>
+    </div>
+  </div>
+  <div class="trust-item">
+    <span style="font-size: 30px;">🔄</span>
+    <div>
+      <strong>30-Day Returns</strong>
+      <p>Hassle-free exchange</p>
+    </div>
+  </div>
+  <div class="trust-item">
+    <span style="font-size: 30px;">🎧</span>
+    <div>
+      <strong>24/7 Support</strong>
+      <p>We are here to help</p>
+    </div>
+  </div>
+</div>
+
+<style>
+.trust-bar {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 40px 10%;
+  background: #f0f8ff; /* Light blue tint to match your theme */
+  border-bottom: 1px solid #e1e1e1;
+}
+.trust-item {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  min-width: 200px;
+  margin: 10px 0;
+}
+.trust-item strong {
+  display: block;
+  font-size: 1.1rem;
+  color: #333;
+}
+.trust-item p {
+  font-size: 0.9rem;
+  color: #666;
+  margin: 0;
+}
+</style>  
+
 <!-- FEATURED PRODUCT SECTION -->
 <section id="featured" class="container">
   <h2>Featured Helmet</h2>
@@ -339,4 +398,5 @@ document.querySelectorAll('.scroll-box').forEach(box => {
 
 </body>
 </html>
+
 
