--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@ setInterval(showNotification, 12000); // 12 seconds
 setTimeout(showNotification, 3000);
 </script>
 
-<a href="https://wa.me/919876543210" target="_blank" class="whatsapp-float">
+<div class="whatsapp-float">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="Chat on WhatsApp">
 </a>
 
@@ -606,6 +606,7 @@ setTimeout(showNotification, 3000);
   
 </body>
 </html>
+
 
 
 
