--- a/about.html
+++ b/about.html
@@ -201,7 +201,7 @@ HexRide is more than just a brand; it’s a community of riders who value safety
   document.getElementById("year").textContent = new Date().getFullYear();
 </script>
 
-<a href="https://wa.me/919876543210" target="_blank" class="whatsapp-float">
+<div class="whatsapp-float">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="Chat on WhatsApp">
 </a>
 
@@ -241,4 +241,5 @@ HexRide is more than just a brand; it’s a community of riders who value safety
   
 </body>
 </html>
+
 
