--- a/about.html
+++ b/about.html
@@ -203,7 +203,7 @@ HexRide is more than just a brand; it’s a community of riders who value safety
 
 <div class="whatsapp-float">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="Chat on WhatsApp">
-</a>
+</div>
 
 <style>
 .whatsapp-float {
@@ -241,5 +241,6 @@ HexRide is more than just a brand; it’s a community of riders who value safety
   
 </body>
 </html>
+
 
 
