--- a/contact.html
+++ b/contact.html
@@ -105,18 +105,91 @@
 <br>
   <p>Have questions or need help? Reach out to us using the details below.</p>
 
-  <img src="img/male.png" alt="Customer service representative assisting clients" class="contact-img">
- <p class="contact-caption">John – Customer Support Specialist</p>
-<br>
-<img src="img/female.png" alt="Customer service representative assisting clients" class="contact-img">
-<p class="contact-caption">Emily – Customer Support Specialist</p>
+ <div class="support-team">
+  <div class="team-member">
+    <img src="img/male.png" alt="John">
+    <h3>John</h3>
+    <p>Support Specialist</p>
+  </div>
+  <div class="team-member">
+    <img src="img/female.png" alt="Emily">
+    <h3>Emily</h3>
+    <p>Support Specialist</p>
+  </div>
+</div>
+
+<style>
+.support-team {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  margin-bottom: 50px;
+  flex-wrap: wrap;
+}
+.team-member {
+  text-align: center;
+  background: #fdfdfd;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+  width: 200px;
+}
+.team-member img {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 3px solid #007bff;
+  margin-bottom: 15px;
+}
+.team-member h3 { margin: 5px 0; font-size: 1.2rem; }
+.team-member p { color: #666; font-size: 0.9rem; }
+</style>
 <br>
   <section>
     <h2>Get in Touch</h2>
 <br>
-    <p>Email: hexride@gmail.com</p>
-    <p>Phone: +91-9876543210 / +91-2345678901</p>
-    <p>Address: Maharashtra, Mumbai, India</p>
+    <section class="contact-info-grid">
+  <div class="info-card">
+    <i class="fas fa-envelope"></i>
+    <h4>Email Us</h4>
+    <p>hexride@gmail.com</p>
+  </div>
+  <div class="info-card">
+    <i class="fas fa-phone-alt"></i>
+    <h4>Call Us</h4>
+    <p class="no-link-text">+91-9876543210</p>
+    <p class="no-link-text">+91-2345678901</p>
+  </div>
+  <div class="info-card">
+    <i class="fas fa-map-marker-alt"></i>
+    <h4>Visit Us</h4>
+    <p>Maharashtra, Mumbai, India</p>
+  </div>
+</section>
+
+<style>
+.contact-info-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 20px;
+  margin-top: 30px;
+}
+.info-card {
+  background: #f0f8ff;
+  padding: 30px;
+  border-radius: 10px;
+  text-align: center;
+  transition: 0.3s;
+}
+.info-card i {
+  font-size: 30px;
+  color: #007bff;
+  margin-bottom: 15px;
+}
+.info-card h4 { margin-bottom: 10px; font-size: 1.3rem; }
+.no-link-text { pointer-events: none; color: inherit; }
+</style>
   </section>
 <br>
 
@@ -244,4 +317,5 @@
   
 </body>
 </html>
+
 
