--- a/contact.html
+++ b/contact.html
@@ -201,27 +201,21 @@
   line-height: 50px;
   text-align: center;
   border-radius: 50%;
-  background: #333;
   color: white;
   margin: 10px;
   font-size: 24px;
+  transition: transform 0.3s;
 }
-.social-icon:hover {
-  background: #555;
-}
+.social-icon:hover { transform: scale(1.2); }
+
+.fb { background: #1877F2; }
+.ig { background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%); }
+.tw { background: #000000; }
 </style>
 
-<a href="https://facebook.com" class="social-icon" target="_blank">
-  <i class="fab fa-facebook-f"></i>
-</a>
-
-<a href="https://instagram.com" class="social-icon" target="_blank">
-  <i class="fab fa-instagram"></i>
-</a>
-
-<a href="https://twitter.com" class="social-icon" target="_blank">
-  <i class= "fab fa-x-twitter"></i>
-</a>
+<a href="#" class="social-icon fb"><i class="fab fa-facebook-f"></i></a>
+<a href="#" class="social-icon ig"><i class="fab fa-instagram"></i></a>
+<a href="#" class="social-icon tw"><i class="fab fa-x-twitter"></i></a>
 
 </main>
 
@@ -317,5 +311,6 @@
   
 </body>
 </html>
+
 
 
