--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -193,29 +194,129 @@
   </section>
 <br>
 
+<div class="contact-form-container">
+  <h2>Send us a Message</h2>
+  <form id="contactForm">
+    <div class="form-group">
+      <input type="text" placeholder="Your Name" required>
+      <input type="email" placeholder="Your Email" required>
+    </div>
+    <input type="text" placeholder="Subject" required>
+    <textarea rows="5" placeholder="How can we help you?" required></textarea>
+    <button type="submit" class="submit-btn">Send Message</button>
+  </form>
+</div>
+
 <style>
-.social-icon {
-  display: inline-block;
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
+.contact-form-container {
+  max-width: 800px;
+  margin: 50px auto;
+  padding: 30px;
+  background: #fff;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.05);
+  border-radius: 15px;
+}
+
+.form-group {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.contact-form-container input, 
+.contact-form-container textarea {
+  width: 100%;
+  padding: 15px;
+  margin-bottom: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  font-family: inherit;
+  outline: none;
+}
+
+.contact-form-container input:focus, 
+.contact-form-container textarea:focus {
+  border-color: #007bff;
+}
+
+.submit-btn {
+  background: linear-gradient(90deg, #007bff, #00aaff);
+  color: white;
+  border: none;
+  padding: 15px 40px;
+  border-radius: 30px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.submit-btn:hover {
+  box-shadow: 0 5px 15px rgba(0, 123, 255, 0.4);
+  transform: scale(1.02);
+}
+
+@media (max-width: 600px) {
+  .form-group { flex-direction: column; gap: 0; }
+}
+</style>
+  
+<div class="social-container">
+  <h3>Follow Our Journey</h3>
+  <div class="social-wrapper">
+    <a href="https://facebook.com/hexride" class="social-icon fb" target="_blank">
+      <i class="fab fa-facebook-f"></i>
+    </a>
+
+    <a href="https://instagram.com/hexride" class="social-icon ig" target="_blank">
+      <i class="fab fa-instagram"></i>
+    </a>
+
+    <a href="https://twitter.com/hexride" class="social-icon tw" target="_blank">
+      <i class="fab fa-x-twitter"></i>
+    </a>
+  </div>
+</div>
+
+<style>
+.social-container {
   text-align: center;
+  margin: 40px 0;
+  padding: 20px;
+  background: #f9f9f9;
+  border-radius: 15px;
+}
+
+.social-wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin-top: 15px;
+}
+
+.social-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 55px;
+  height: 55px;
   border-radius: 50%;
   color: white;
-  margin: 10px;
   font-size: 24px;
-  transition: transform 0.3s;
+  text-decoration: none;
+  transition: all 0.3s ease;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
-.social-icon:hover { transform: scale(1.2); }
 
+.social-icon:hover {
+  transform: translateY(-5px) scale(1.1);
+  box-shadow: 0 8px 15px rgba(0,0,0,0.2);
+}
+
+/* Official Brand Colors */
 .fb { background: #1877F2; }
-.ig { background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%); }
+.ig { background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2397 75%, #ad38e7 100%); }
 .tw { background: #000000; }
 </style>
-
-<a href="#" class="social-icon fb"><i class="fab fa-facebook-f"></i></a>
-<a href="#" class="social-icon ig"><i class="fab fa-instagram"></i></a>
-<a href="#" class="social-icon tw"><i class="fab fa-x-twitter"></i></a>
 
 </main>
 
@@ -311,6 +412,7 @@
   
 </body>
 </html>
+
 
 
 
