--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
   <title>Contact Us — HexRide</title>
 <link rel="icon" type="image/x-icon" href="img/hexride.png">
@@ -76,8 +76,6 @@
   }
 }
 </style>
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
 
@@ -194,33 +192,50 @@
   </section>
 <br>
 
-<div class="contact-form-container">
-  <h2>Send us a Message</h2>
-  <form id="contactForm">
-    <div class="form-group">
-      <input type="text" placeholder="Your Name" required>
-      <input type="email" placeholder="Your Email" required>
-    </div>
-    <input type="text" placeholder="Subject" required>
-    <textarea rows="5" placeholder="How can we help you?" required></textarea>
-    <button type="submit" class="submit-btn">Send Message</button>
-  </form>
-</div>
+<section class="form-wrapper">
+  <div class="contact-form-container">
+    <h2>Send us a Message</h2>
+    <form id="contactForm">
+      <div class="form-row">
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Your Email" required>
+      </div>
+      <input type="text" placeholder="Subject" required>
+      <textarea rows="5" placeholder="How can we help you?" required></textarea>
+      <button type="submit" class="submit-btn">Send Message</button>
+    </form>
+  </div>
+</section>
 
 <style>
-.contact-form-container {
-  max-width: 800px;
-  margin: 50px auto;
-  padding: 30px;
-  background: #fff;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.05);
-  border-radius: 15px;
+/* Ensuring the section is visible */
+.form-wrapper {
+  width: 100%;
+  padding: 60px 0;
+  background-color: #f4f7f6; /* Light grey to make the white form pop */
+  margin: 40px 0;
+  display: block !important;
 }
 
-.form-group {
+.contact-form-container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 40px;
+  background: #ffffff; /* Solid White */
+  box-shadow: 0 15px 35px rgba(0,0,0,0.1);
+  border-radius: 15px;
+  border-top: 5px solid #007bff;
+}
+
+.contact-form-container h2 {
+  text-align: center;
+  margin-bottom: 30px;
+  color: #333;
+}
+
+.form-row {
   display: flex;
   gap: 20px;
-  margin-bottom: 20px;
 }
 
 .contact-form-container input, 
@@ -230,33 +245,31 @@
   margin-bottom: 20px;
   border: 1px solid #ddd;
   border-radius: 8px;
-  font-family: inherit;
-  outline: none;
-}
-
-.contact-form-container input:focus, 
-.contact-form-container textarea:focus {
-  border-color: #007bff;
+  box-sizing: border-box; /* Crucial for width alignment */
+  font-size: 16px;
 }
 
 .submit-btn {
+  width: 100%;
   background: linear-gradient(90deg, #007bff, #00aaff);
   color: white;
   border: none;
-  padding: 15px 40px;
-  border-radius: 30px;
+  padding: 18px;
+  border-radius: 8px;
+  font-size: 18px;
   font-weight: bold;
   cursor: pointer;
   transition: 0.3s;
 }
 
 .submit-btn:hover {
-  box-shadow: 0 5px 15px rgba(0, 123, 255, 0.4);
-  transform: scale(1.02);
+  filter: brightness(1.1);
+  transform: translateY(-2px);
 }
 
 @media (max-width: 600px) {
-  .form-group { flex-direction: column; gap: 0; }
+  .form-row { flex-direction: column; gap: 0; }
+  .contact-form-container { padding: 20px; width: 90%; }
 }
 </style>
   
@@ -373,45 +386,21 @@
 </script>
 
 <div class="whatsapp-float">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="Chat on WhatsApp">
-</a>
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="Chat">
+</div>
 
-<style>
-.whatsapp-float {
-  position: fixed;
-  bottom: 90px; /* Positioned above the "Back to Top" button */
-  right: 30px;
-  width: 60px;
-  height: 60px;
-  background-color: #25d366;
-  border-radius: 50%;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-  z-index: 1000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: transform 0.3s;
-  animation: pulse 2s infinite;
-}
-
-.whatsapp-float:hover {
-  transform: scale(1.1);
-}
-
-.whatsapp-float img {
-  width: 35px;
-  height: 35px;
-}
-
-@keyframes pulse {
-  0% { box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7); }
-  70% { box-shadow: 0 0 0 15px rgba(37, 211, 102, 0); }
-  100% { box-shadow: 0 0 0 0 rgba(37, 211, 102, 0); }
-}
-</style>
+<script>
+  // Simple check: This script will run when the form is submitted
+  document.getElementById('contactForm').addEventListener('submit', function(e) {
+    e.preventDefault();
+    alert('Thank you! Your message has been sent to HexRide.');
+    this.reset(); // Clears the form
+  });
+</script>
   
 </body>
 </html>
+
 
 
 
