--- a/about.html
+++ b/about.html
@@ -261,13 +261,13 @@ HexRide is more than just a brand; it’s a community of riders who value safety
 </script>
 
 <div class="whatsapp-float">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="Chat on WhatsApp">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="Support">
 </div>
 
 <style>
 .whatsapp-float {
   position: fixed;
-  bottom: 90px; /* Positioned above the "Back to Top" button */
+  bottom: 90px; /* Matching your About page height */
   right: 30px;
   width: 60px;
   height: 60px;
@@ -275,15 +275,12 @@ HexRide is more than just a brand; it’s a community of riders who value safety
   border-radius: 50%;
   box-shadow: 0 4px 10px rgba(0,0,0,0.3);
   z-index: 1000;
-  display: flex;
+  display: flex !important; /* Forces visibility */
   align-items: center;
   justify-content: center;
   transition: transform 0.3s;
-  animation: pulse 2s infinite;
-}
-
-.whatsapp-float:hover {
-  transform: scale(1.1);
+  animation: pulse 2s infinite; /* Uses the 'pulse' animation below */
+  pointer-events: none; /* Keeps it inactive as per your request */
 }
 
 .whatsapp-float img {
@@ -291,15 +288,27 @@ HexRide is more than just a brand; it’s a community of riders who value safety
   height: 35px;
 }
 
+/* The exact animation logic from your About page */
 @keyframes pulse {
   0% { box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7); }
   70% { box-shadow: 0 0 0 15px rgba(37, 211, 102, 0); }
   100% { box-shadow: 0 0 0 0 rgba(37, 211, 102, 0); }
 }
+
+/* Ensures it doesn't overlap important elements on small screens */
+@media (max-width: 768px) {
+  .whatsapp-float {
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+  }
+}
 </style>
   
 </body>
 </html>
+
 
 
 
