--- a/about.html
+++ b/about.html
@@ -261,26 +261,31 @@ HexRide is more than just a brand; it’s a community of riders who value safety
 </script>
 
 <div class="whatsapp-float">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="Support">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="Chat on WhatsApp">
 </div>
 
 <style>
 .whatsapp-float {
   position: fixed;
-  bottom: 90px; /* Matching your About page height */
+  /* Match the 90px height of your Index/About pages */
+  bottom: 90px; 
   right: 30px;
   width: 60px;
   height: 60px;
   background-color: #25d366;
   border-radius: 50%;
   box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-  z-index: 1000;
-  display: flex !important; /* Forces visibility */
+  z-index: 1100; /* Stays above the back-to-top button */
+  display: flex !important;
   align-items: center;
   justify-content: center;
   transition: transform 0.3s;
-  animation: pulse 2s infinite; /* Uses the 'pulse' animation below */
-  pointer-events: none; /* Keeps it inactive as per your request */
+  
+  /* Applying BOTH pulse (glow) and bounce (movement) */
+  animation: pulse 2s infinite, indexBounce 2s infinite;
+  
+  /* Makes it non-clickable as per your request */
+  pointer-events: none; 
 }
 
 .whatsapp-float img {
@@ -288,26 +293,44 @@ HexRide is more than just a brand; it’s a community of riders who value safety
   height: 35px;
 }
 
-/* The exact animation logic from your About page */
+/* 1. Pulse Animation (Glow effect) */
 @keyframes pulse {
   0% { box-shadow: 0 0 0 0 rgba(37, 211, 102, 0.7); }
   70% { box-shadow: 0 0 0 15px rgba(37, 211, 102, 0); }
   100% { box-shadow: 0 0 0 0 rgba(37, 211, 102, 0); }
 }
 
-/* Ensures it doesn't overlap important elements on small screens */
+/* 2. Bounce Animation (Up & Down movement) */
+@keyframes indexBounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-12px); /* Moves up */
+  }
+  60% {
+    transform: translateY(-6px); /* Half bounce */
+  }
+}
+
+/* Hover effect if you ever enable pointer-events */
+.whatsapp-float:hover {
+  transform: scale(1.1);
+}
+
 @media (max-width: 768px) {
   .whatsapp-float {
-    bottom: 20px;
+    bottom: 80px;
     right: 20px;
-    width: 50px;
-    height: 50px;
+    width: 55px;
+    height: 55px;
   }
 }
 </style>
   
 </body>
 </html>
+
 
 
 
