--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
   <nav class="nav">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="product.html">Product</a></li>
+      <li><a href="products.html">Product</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="contact.html" class="active">Contact</a></li>
     </ul>
@@ -496,6 +496,7 @@
    
 </body>
 </html>
+
 
 
 
