--- a/products.html
+++ b/products.html
@@ -93,42 +93,49 @@
 
 /* --- ENHANCED PRODUCT CARD --- */
 .product-card {
-  position: relative; 
-  overflow: hidden; /* Clips the zooming image */
+  position: relative !important;
+  overflow: hidden !important; 
   background: #fff;
   border-radius: 12px;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  /* Add a border so you can see the card boundaries */
+  border: 1px solid #e0e0e0;
+  transition: transform 0.3s ease-out, box-shadow 0.3s ease-out !important;
+  z-index: 1;
+  cursor: pointer;
 }
 
-/* Card Lift & Shadow on Hover */
+/* 1. Lift and Glow Effect */
 .product-card:hover {
-  transform: translateY(-10px);
-  box-shadow: 0 20px 40px rgba(0,0,0,0.15);
+  transform: translateY(-10px) !important;
+  box-shadow: 0 20px 40px rgba(0,0,0,0.2) !important;
+  z-index: 50 !important; /* Brings it to the very front */
 }
 
-/* Image Zoom */
+/* 2. Image Zoom Effect */
 .product-card img {
-  width: 100%;
-  transition: transform 0.5s ease;
+  width: 100% !important;
+  display: block;
+  transition: transform 0.5s ease !important;
+  /* Prevents blurriness on zoom */
+  backface-visibility: hidden;
 }
 
 .product-card:hover img {
-  transform: scale(1.1); /* Subtle 10% zoom */
+  transform: scale(1.15) !important; /* Zoom in 15% */
 }
 
-/* Sale Badge */
+/* 3. Sale Badge Position Fix */
 .sale-badge {
-  position: absolute;
-  top: 15px;
-  left: 15px; /* Moved to left to avoid clashing with other icons */
-  background: #ff4757;
-  color: white;
-  padding: 4px 12px;
+  position: absolute !important;
+  top: 10px !important;
+  left: 10px !important;
+  background: #ff4757 !important;
+  color: white !important;
+  padding: 5px 12px !important;
   font-size: 12px;
   font-weight: bold;
   border-radius: 4px;
-  z-index: 5; /* Stays above image */
-  pointer-events: none; /* Mouse goes "through" it to trigger zoom */
+  z-index: 100 !important; /* Ensure it stays above zoomed image */
 }
 
 </style>
@@ -469,7 +476,8 @@ setTimeout(showNotification, 3000);
 
 <div class="whatsapp-float">
   <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="Chat on WhatsApp">
-
+</div>
+  
 <style>
 .whatsapp-float {
   position: fixed;
@@ -506,6 +514,7 @@ setTimeout(showNotification, 3000);
   
 </body>
 </html>
+
 
 
 
