--- a/about.html
+++ b/about.html
@@ -242,7 +242,7 @@ HexRide is more than just a brand; it’s a community of riders who value safety
     <div class="footer-section">
       <h4>Contact</h4>
       <p>Email: hexride@gmail.com</p>
-      <p>Phone: +91 9876543210</p>
+      <p>Phone: +91 9876543210 / +91 2345678910</p>
     </div>
 
   </div>
@@ -317,6 +317,7 @@ HexRide is more than just a brand; it’s a community of riders who value safety
   
 </body>
 </html>
+
 
 
 
