--- a/faqs.html
+++ b/faqs.html
@@ -165,7 +165,7 @@
     <div class="footer-section">
       <h4>Contact</h4>
       <p>Email: hexride@gmail.com</p>
-      <p>Phone: +91 9876543210</p>
+      <p>Phone: +91 9876543210 / +91 2345678910</p>
     </div>
 
   </div>
@@ -184,3 +184,4 @@ document.getElementById("year").textContent = new Date().getFullYear();
 
 </body>
 </html>
+
