--- a/products.html
+++ b/products.html
@@ -306,7 +306,7 @@
     <div class="footer-section">
       <h4>Contact</h4>
       <p>Email: hexride@gmail.com</p>
-      <p>Phone: +91 9876543210</p>
+      <p>Phone: +91 9876543210 / +91 2345678910</p>
     </div>
 
   </div>
@@ -514,6 +514,7 @@ setTimeout(showNotification, 3000);
   
 </body>
 </html>
+
 
 
 
