--- a/return-policy.html
+++ b/return-policy.html
@@ -168,7 +168,7 @@
     <div class="footer-section">
       <h4>Contact</h4>
       <p>Email: hexride@gmail.com</p>
-      <p>Phone: +91 9876543210</p>
+      <p>Phone: +91 9876543210 / +91 2345678910</p>
     </div>
 
   </div>
@@ -187,3 +187,4 @@ document.getElementById("year").textContent = new Date().getFullYear();
 
 </body>
 </html>
+
