--- a/index.html
+++ b/index.html
@@ -416,7 +416,8 @@ function scrollToTop() {
     <div class="footer-section">
       <h4>Contact</h4>
       <p>Email: hexride@gmail.com</p>
-      <p>Phone: +91 9876543210 / +91 2345678910</p>
+      <p>Phone: +91 9876543210
+                +91 2345678910</p>
     </div>
 
   </div>
@@ -606,6 +607,7 @@ setTimeout(showNotification, 3000);
   
 </body>
 </html>
+
 
 
 
