--- a/contact.html
+++ b/contact.html
@@ -399,7 +399,7 @@
     <div class="footer-section">
       <h4>Contact</h4>
       <p>Email: hexride@gmail.com</p>
-      <p>Phone: +91 9876543210 / +91 2345678910</p>
+      <p>Phone: +91 9876543210</p>
     </div>
 
   </div>
@@ -496,6 +496,7 @@
    
 </body>
 </html>
+
 
 
 
