--- a/index.html
+++ b/index.html
@@ -416,8 +416,7 @@ function scrollToTop() {
     <div class="footer-section">
       <h4>Contact</h4>
       <p>Email: hexride@gmail.com</p>
-      <p>Phone: +91 9876543210
-                +91 2345678910</p>
+      <p>Phone: +91 9876543210</p>
     </div>
 
   </div>
@@ -607,6 +606,7 @@ setTimeout(showNotification, 3000);
   
 </body>
 </html>
+
 
 
 
