--- a/contact.html
+++ b/contact.html
@@ -201,6 +201,12 @@
     <h4>Visit Us</h4>
     <p>Maharashtra, Mumbai, India</p>
   </div>
+  <div class="info-card">
+     <i class="fas fa-clock"></i>
+     <h4>Business Hours</h4>
+     <p>Mon - Sat: 9:00 AM - 7:00 PM</p>
+     <p>Sunday: Closed</p>
+</div>
 </section>
 
 <style>
@@ -236,6 +242,12 @@
         <input type="text" placeholder="Your Name" required>
         <input type="email" placeholder="Your Email" required>
       </div>
+      <select name="reason" style="width: 100%; padding: 15px; margin-bottom: 20px; border: 1px solid #ddd; border-radius: 8px; font-size: 16px;">
+  <option value="" disabled selected>Select Inquiry Type</option>
+  <option value="sales">Sales Inquiry</option>
+  <option value="support">Technical Support</option>
+  <option value="warranty">Warranty Claim</option>
+</select>
       <input type="text" placeholder="Subject" required>
       <textarea rows="5" placeholder="How can we help you?" required></textarea>
       <button type="submit" class="submit-btn">Send Message</button>
@@ -403,15 +415,47 @@
     </div>
 
   </div>
- 
-<script>
-  // Simple check: This script will run when the form is submitted
-  document.getElementById('contactForm').addEventListener('submit', function(e) {
-    e.preventDefault();
-    alert('Thank you! Your message has been sent to HexRide.');
-    this.reset(); // Clears the form
-  });
-</script>
+</footer>
+ <div id="thankYouModal" class="modal-overlay">
+  <div class="modal-content">
+    <div class="checkmark-circle">
+      <i class="fas fa-check"></i>
+    </div>
+    <h2>Message Sent!</h2>
+    <p>Thank you for reaching out to **HexRide**. Our team will get back to you within 24 hours.</p>
+    <button onclick="closeModal()" class="close-modal-btn">Close</button>
+  </div>
+</div>
+<script>  
+const modal = document.getElementById('thankYouModal');
+const contactForm = document.getElementById('contactForm');
+
+contactForm.addEventListener('submit', function(e) {
+  e.preventDefault();
+  
+  const btn = document.querySelector('.submit-btn');
+  btn.innerHTML = "Sending...";
+  btn.disabled = true;
+
+  // Simulate an API call
+  setTimeout(() => {
+    modal.style.display = 'flex'; // Show Modal
+    btn.innerHTML = "Send Message";
+    btn.disabled = false;
+    contactForm.reset();
+  }, 1200);
+});
+
+function closeModal() {
+  modal.style.display = 'none';
+}
+
+// Close modal if user clicks outside of the white box
+window.onclick = function(event) {
+  if (event.target == modal) {
+    closeModal();
+  }
+}
 
   <div class="footer-bottom">
     <p>&copy; <span id="year"></span> HexRide | All Rights Reserved ®</p>
@@ -484,6 +528,59 @@
     height: 55px;
   }
 }
+
+/* Modal Styles */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(5px);
+  display: none; /* Hidden by default */
+  justify-content: center;
+  align-items: center;
+  z-index: 2000;
+}
+
+.modal-content {
+  background: white;
+  padding: 40px;
+  border-radius: 20px;
+  text-align: center;
+  max-width: 400px;
+  width: 90%;
+  animation: modalPop 0.3s ease-out;
+}
+
+@keyframes modalPop {
+  from { transform: scale(0.8); opacity: 0; }
+  to { transform: scale(1); opacity: 1; }
+}
+
+.checkmark-circle {
+  width: 80px;
+  height: 80px;
+  background: #28a745;
+  color: white;
+  font-size: 40px;
+  line-height: 80px;
+  border-radius: 50%;
+  margin: 0 auto 20px;
+}
+
+.close-modal-btn {
+  margin-top: 20px;
+  padding: 10px 30px;
+  background: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+}  
+  
 </style>
   
 <script>
@@ -496,6 +593,7 @@
    
 </body>
 </html>
+
 
 
 
