--- a/contact.html
+++ b/contact.html
@@ -82,8 +82,9 @@
 <body>
 
 <header class="header">
-  <div class="logo">
-  <img src="img/hexride.png" width="40"> HexRide
+  <a href="index.html" class="logo">
+    <img src="img/hexride.png" width="40" alt="HexRide Logo"> HexRide
+  </a>
 </div>
 
   <nav class="nav">
@@ -593,6 +594,7 @@ window.onclick = function(event) {
 </script>  
 </body>
 </html>
+
 
 
 
