--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,15 @@
   color: #fff;
   font-weight: bold;
   font-size: 22px;
+  text-decoration: none; /* Removes the underline */
+  display: flex;         /* Keeps image and text aligned */
+  align-items: center;
+  gap: 10px;            /* Adds a little space between logo and text */
+}
+
+/* Optional: Subtle hover effect for the logo */
+.logo:hover {
+  opacity: 0.9;
 }
 
 .nav a {
@@ -594,6 +603,7 @@ window.onclick = function(event) {
 </script>  
 </body>
 </html>
+
 
 
 
