--- a/about.html
+++ b/about.html
@@ -30,6 +30,15 @@
   color: #fff;
   font-weight: bold;
   font-size: 22px;
+  text-decoration: none; /* Removes the underline */
+  display: flex;         /* Keeps image and text aligned */
+  align-items: center;
+  gap: 10px;            /* Adds a little space between logo and text */
+}
+
+/* Optional: Subtle hover effect for the logo */
+.logo:hover {
+  opacity: 0.9;
 }
 
 .nav a {
@@ -106,8 +115,9 @@
 <body>
 
 <header class="header">
-  <div class="logo">
-  <img src="img/hexride.png" width="40"> HexRide
+  <a href="index.html" class="logo">
+    <img src="img/hexride.png" width="40" alt="HexRide Logo"> HexRide
+  </a>
 </div>
 
   <nav class="nav">
@@ -316,6 +326,7 @@ HexRide is more than just a brand; it’s a community of riders who value safety
   
 </body>
 </html>
+
 
 
 
