--- a/products.html
+++ b/products.html
@@ -146,9 +146,10 @@
 <body>
 
 <header class="header">
-  <div class="logo">
-  <img src="img/hexride.png" width="40"> HexRide
-</div>
+  <a href="index.html" class="logo">
+    <img src="img/hexride.png" width="40" alt="HexRide Logo"> HexRide
+  </a>
+  
   <nav class="nav">
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -514,6 +515,7 @@ setTimeout(showNotification, 3000);
   
 </body>
 </html>
+
 
 
 
