--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
   color: #fff;
   font-weight: bold;
   font-size: 22px;
+  text-decoration: none; /* Removes the underline */
+  display: flex;         /* Keeps image and text aligned */
+  align-items: center;
+  gap: 10px;            /* Adds a little space between logo and text */
+}
+
+/* Optional: Subtle hover effect for the logo */
+.logo:hover {
+  opacity: 0.9;
 }
 
 .nav a {
@@ -79,9 +88,9 @@
 
 <body>
 <header class="header">
-  <div class="logo">
-  <img src="img/hexride.png" width="40"> HexRide
-</div>
+  <a href="index.html" class="logo">
+    <img src="img/hexride.png" width="40" alt="HexRide Logo"> HexRide
+  </a>
 
   <nav class="nav">
     <ul>
@@ -606,6 +615,7 @@ setTimeout(showNotification, 3000);
   
 </body>
 </html>
+
 
 
 
