--- a/index.html
+++ b/index.html
@@ -9,76 +9,135 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive-fix.css">
 <style>
-/* Navbar with gradient background */
+/* --- MODERN NAVBAR STYLES --- */
+:root {
+  --primary: #007bff;
+  --accent: #ffd700;
+  --dark-glass: rgba(10, 25, 47, 0.85); /* Dark Blue-Black transparency */
+  --text-light: #f1f5f9;
+}
+
 .header {
-  background: linear-gradient(90deg, #007bff, #00aaff); /* HexRide gradient blue */
-  border-bottom: 2px solid #0056b3;
+  background: var(--dark-glass);
+  backdrop-filter: blur(12px); /* Creates the frosted glass effect */
+  -webkit-backdrop-filter: blur(12px);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   position: sticky;
   top: 0;
   z-index: 1000;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  transition: background 0.3s, box-shadow 0.3s;
+  padding: 0 5%; /* Adds breathing room on sides */
+  transition: all 0.3s ease;
 }
 
-.header:hover {
-  box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+/* Flex container to align items perfectly */
+.nav-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 70px;
 }
 
+/* Logo Styling */
 .logo {
   color: #fff;
-  font-weight: bold;
-  font-size: 22px;
-  text-decoration: none; /* Removes the underline */
-  display: flex;         /* Keeps image and text aligned */
+  font-weight: 800;
+  font-size: 24px;
+  text-decoration: none;
+  display: flex;
   align-items: center;
-  gap: 10px;            /* Adds a little space between logo and text */
+  gap: 12px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
-/* Optional: Subtle hover effect for the logo */
-.logo:hover {
-  opacity: 0.9;
+.logo img {
+  filter: drop-shadow(0 0 5px rgba(0, 123, 255, 0.5)); /* Glow effect on logo */
+}
+
+/* Desktop Navigation */
+.nav ul {
+  display: flex;
+  gap: 30px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .nav a {
-  color: #fff;
+  color: rgba(255, 255, 255, 0.8);
   font-weight: 500;
-  transition: color 0.3s, transform 0.2s;
+  font-size: 16px;
+  text-decoration: none;
+  position: relative;
+  padding: 5px 0;
+  transition: color 0.3s;
 }
 
-.nav a:hover,
-.nav a.active {
-  color: #ffd700; /* Gold on hover or active */
-  transform: scale(1.1);
+/* Hover & Active Animation (Underline expands from center) */
+.nav a::after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 2px;
+  bottom: 0;
+  left: 50%;
+  background-color: var(--accent);
+  transition: all 0.3s ease-in-out;
+  transform: translateX(-50%);
 }
 
-/* Mobile menu button */
-.menu-btn {
+.nav a:hover, .nav a.active {
   color: #fff;
-  font-size: 26px;
 }
 
-/* Mobile responsive menu */
-@media (max-width: 768px) {
-  .nav ul {
-    position: absolute;
-    top: 60px;
-    right: 10px;
-    background: linear-gradient(180deg, #007bff, #00aaff);
-    flex-direction: column;
-    width: 200px;
-    padding: 10px;
-    border: 1px solid #0056b3;
-    display: none;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  }
+.nav a:hover::after, .nav a.active::after {
+  width: 100%;
+}
 
-  .nav ul.show {
+/* Mobile Menu Button */
+.menu-btn {
+  display: none;
+  color: #fff;
+  font-size: 28px;
+  cursor: pointer;
+  z-index: 1002;
+}
+
+/* --- MOBILE RESPONSIVE DESIGN --- */
+@media (max-width: 768px) {
+  .menu-btn {
     display: block;
   }
 
+  .nav {
+    position: fixed;
+    top: 0;
+    right: -100%; /* Hidden off-screen by default */
+    width: 250px;
+    height: 100vh;
+    background: #0a192f; /* Solid dark color for menu */
+    box-shadow: -5px 0 15px rgba(0,0,0,0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: right 0.4s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    z-index: 1001;
+  }
+
+  .nav.active {
+    right: 0; /* Slides in */
+  }
+
+  .nav ul {
+    flex-direction: column;
+    text-align: center;
+    gap: 40px;
+  }
+  
   .nav a {
-    padding: 8px 0;
+    font-size: 20px;
   }
 }
 </style>
@@ -88,19 +147,24 @@
 
 <body>
 <header class="header">
-  <a href="index.html" class="logo">
-    <img src="img/hexride.png" width="40" alt="HexRide Logo"> HexRide
-  </a>
+  <div class="nav-container">
+    <a href="index.html" class="logo">
+      <img src="img/hexride.png" width="45" alt="HexRide Logo"> 
+      HexRide
+    </a>
 
-  <nav class="nav">
-    <ul>
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="products.html">Products</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-  <div class="menu-btn" onclick="toggleMenu()">☰</div>
+    <nav class="nav" id="navbar">
+      <ul>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+
+    <div class="menu-btn" onclick="toggleMenu()">
+      &#9776; </div>
+  </div>
 </header>
 
 <!-- HERO SECTION -->
@@ -435,12 +499,21 @@ function scrollToTop() {
   </div>
 </footer>
 
-<script>
+<script>  
 function toggleMenu() {
-  document.querySelector(".nav ul").classList.toggle("show");
+  const nav = document.getElementById("navbar");
+  const btn = document.querySelector(".menu-btn");
+  
+  nav.classList.toggle("active");
+  
+  // Optional: Change icon from Hamburger to X when open
+  if (nav.classList.contains("active")) {
+    btn.innerHTML = "&times;"; // X symbol
+  } else {
+    btn.innerHTML = "&#9776;"; // Hamburger symbol
+  }
 }
-document.getElementById("year").textContent = new Date().getFullYear();
-</script>
+</script>  
 
 <script>
 document.querySelectorAll('.scroll-box').forEach(box => {
@@ -615,6 +688,7 @@ setTimeout(showNotification, 3000);
   
 </body>
 </html>
+
 
 
 
