--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+this is my home page code, i want to improve the navigation bar looks and aesthetics: <!doctype html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
