--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!doctype html>
+<!doctype html>
 
 <html lang="en">
 
@@ -1231,6 +1231,7 @@ setTimeout(showNotification, 3000);
 </body>
 
 </html>
+
 
 
 
