--- a/products.html
+++ b/products.html
@@ -8,56 +8,84 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/responsive-fix.css">
 <style>
-/* Navbar with gradient background */
+
+  /* --- Global Header & Navbar --- */
 .header {
-  background: linear-gradient(90deg, #007bff, #00aaff); /* HexRide gradient blue */
+  background: linear-gradient(90deg, #007bff, #00aaff); 
   border-bottom: 2px solid #0056b3;
   position: sticky;
   top: 0;
   z-index: 1000;
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-  transition: background 0.3s, box-shadow 0.3s;
-}
-
-.header:hover {
-  box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+  display: flex;
+  justify-content: space-between; /* Keeps logo left, nav right */
+  align-items: center;
+  padding: 10px 5%;
 }
 
 .logo {
   color: #fff;
   font-weight: bold;
   font-size: 22px;
-  text-decoration: none; /* Removes the underline */
-  display: flex;         /* Keeps image and text aligned */
+  text-decoration: none;
+  display: flex;
   align-items: center;
-  gap: 10px;            /* Adds a little space between logo and text */
+  gap: 10px;
 }
 
-/* Optional: Subtle hover effect for the logo */
-.logo:hover {
-  opacity: 0.9;
+.nav ul {
+  display: flex;
+  list-style: none;
+  gap: 30px;
+  margin: 0;
+  padding: 0;
 }
 
 .nav a {
   color: #fff;
+  text-decoration: none;
   font-weight: 500;
-  transition: color 0.3s, transform 0.2s;
+  position: relative;
+  padding: 5px 0;
+  transition: color 0.3s ease;
+}
+
+/* --- Interactive Center-Out Underline --- */
+.nav a::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #ffd700; /* HexRide Gold */
+  transform: scaleX(0); /* Hidden by default */
+  transform-origin: center;
+  transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* Hover and Active states: The line expands from center */
+.nav a:hover::after,
+.nav a.active::after {
+  transform: scaleX(1);
 }
 
 .nav a:hover,
 .nav a.active {
-  color: #ffd700; /* Gold on hover or active */
-  transform: scale(1.1);
+  color: #ffd700; /* Text turns gold */
 }
 
-/* Mobile menu button */
+/* --- Mobile Navigation --- */
 .menu-btn {
   color: #fff;
   font-size: 26px;
+  cursor: pointer;
+  display: none;
 }
 
-/* Mobile responsive menu */
 @media (max-width: 768px) {
+  .menu-btn { display: block; }
+
   .nav ul {
     position: absolute;
     top: 60px;
@@ -65,19 +93,23 @@
     background: linear-gradient(180deg, #007bff, #00aaff);
     flex-direction: column;
     width: 200px;
-    padding: 10px;
+    padding: 15px;
     border: 1px solid #0056b3;
-    display: none;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    display: none; 
+    border-radius: 8px;
+    box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+    gap: 10px;
   }
 
-  .nav ul.show {
-    display: block;
-  }
+  .nav ul.show { display: flex; }
 
-  .nav a {
-    padding: 8px 0;
+  /* Disable animation on mobile for better performance */
+  .nav a::after { display: none; }
+  
+  .nav a.active {
+    background: rgba(255, 215, 0, 0.2);
+    border-radius: 4px;
+    color: #ffd700;
   }
 }
 
@@ -158,16 +190,16 @@
   <a href="index.html" class="logo">
     <img src="img/hexride.png" width="40" alt="HexRide Logo"> HexRide
   </a>
-  
+
   <nav class="nav">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="products.html" class="active">Products</a></li>
-      <li><a href="about.html">About</a></li>
+      <li><a href="products.html" class="active">Product</a></li> <li><a href="about.html">About</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
-<div class="menu-btn" onclick="toggleMenu()">☰</div>
+
+  <div class="menu-btn" onclick="toggleMenu()">☰</div>
 </header>
 
 <section class="container">
@@ -524,6 +556,7 @@ setTimeout(showNotification, 3000);
   
 </body>
 </html>
+
 
 
 
