--- a/index.html
+++ b/index.html
@@ -660,9 +660,9 @@
     setTimeout(showNotification, 3000);
   </script>
 
-  <a href="https://wa.me/919876543210" class="whatsapp-float" target="_blank">
+  <div class="whatsapp-float">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="Chat on WhatsApp">
-  </a>
+  </div>
 
   <style>
     .whatsapp-float {
@@ -737,6 +737,7 @@
 </body>
 
 </html>
+
 
 
 
